--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -6,17 +6,18 @@
   gap: 16px;
   justify-content: center;
   background-color: var(--color-secondary-300);
-  border: 2px solid var(--color-secondary-700);
-  border-radius: 4px;
+  border: 1px solid var(--color-secondary-700);
   width: 100%;
+  padding: var(--space-2) 0;
 }
 
 .signUpWrapper {
+  margin-top: var(--space-5);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  gap: 16px;
+  gap: 8px;
   font-size: var(--font-length-md1);
   height: 100%;
   width: 100%;
@@ -24,6 +25,7 @@
 .signUpWrapper button {
   background-color: var(--color-alternate-300);
   color: var(--color-secondary-100);
+  border-radius: 5px;
 }
 .signUpFormItem {
   padding: var(--space-1) var(--space-2);
@@ -31,22 +33,33 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: var(--space-2) 0;
+}
+
+.signUpFormItem > label {
+  font-size: var(--font-length-md2);
+  color: var(--color-secondary-700);
 }
 .signUpFormItem > input {
   border: 2px solid var(--color-secondary-700);
 }
+.signUpFormItem > input::placeholder {
+  color: var(--color-secondary-700);
+}
 
 @media screen and (min-width: 786px) {
   .signUpWrapper {
-    /* margin-left: auto;
-    margin-right: auto; */
-    /* width: 50vw; */
-    margin-top: 6rem;
+    max-width: 40vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: var(--space-6);
     justify-content: flex-start;
     font-size: var(--font-length-md1);
   }
 
   .signUpFormWrapper {
+    border: 2px solid var(--color-secondary-700);
+    border-radius: 5px;
+    box-shadow: 1px 2px 2px var(--color-secondary-700),
+      2px 3px 3px var(--color-secondary-700);
   }
 }
