--- a/src/style.css
+++ b/src/style.css
@@ -113,6 +113,7 @@ select {
   font: inherit;
   border: none;
   padding: var(--space-1) var(--space-3);
+  border-radius: 4px;
 }
 
 p,
@@ -161,7 +162,7 @@ p {
   margin-right: auto;
   font-family: "Kigers";
   color: #f06105;
-  font-size: var(--font-length-md3);
+  font-size: var(--font-length-lg1);
   text-align: center;
   padding: var(--space-1);
 }
@@ -170,5 +171,5 @@ p {
   width: 100%;
   position: fixed;
   top: 0;
-  background-color: var(--color-primary-100);
+  /* background-color: var(--color-primary-100); */
 }
