--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -6,13 +6,14 @@
   gap: 16px;
   justify-content: center;
   background-color: var(--color-secondary-300);
-  border: 1px solid var(--color-secondary-700);
-  width: 100%;
-  padding: var(--space-2) 0;
+  border: 2px solid var(--color-secondary-700);
+  width: 99%;
+  padding: var(--space-1) 0;
+  border-radius: 5px;
 }
 
 .signUpWrapper {
-  margin-top: var(--space-5);
+  margin-top: var(--space-7);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -29,26 +30,15 @@
 }
 .signUpFormItem {
   padding: var(--space-1) var(--space-2);
-  width: 100%;
+  width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.signUpFormItem > label {
-  font-size: var(--font-length-md2);
-  color: var(--color-secondary-700);
-}
-.signUpFormItem > input {
-  border: 2px solid var(--color-secondary-700);
-}
-.signUpFormItem > input::placeholder {
-  color: var(--color-secondary-700);
-}
-
 @media screen and (min-width: 786px) {
   .signUpWrapper {
-    max-width: 40vw;
+    max-width: 30vw;
     margin-left: auto;
     margin-right: auto;
     margin-top: var(--space-6);
@@ -57,7 +47,6 @@
   }
 
   .signUpFormWrapper {
-    border: 2px solid var(--color-secondary-700);
     border-radius: 5px;
     box-shadow: 1px 2px 2px var(--color-secondary-700),
       2px 3px 3px var(--color-secondary-700);
