--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
+
   /* border: 4px solid green; */
 }
 
@@ -11,4 +12,43 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 16px;
+  width: 95%;
+  background-color: var(--color-secondary-300);
+  border: 2px solid var(--color-secondary-700);
+  padding: var(--space-2) var(--space-1);
+  border-radius: 5px;
+  margin-top: var(--space-5);
+  box-shadow: 0px 1px 1px var(--color-secondary-700),
+    1px 1px 1px var(--color-secondary-700),
+    1px 2px 2px var(--color-secondary-700);
+}
+.signUpText {
+  color: var(--color-secondary-700);
+  font-size: var(--font-length-md1);
+}
+
+.loginErrorMessage {
+  font-size: var(--font-length-md1);
+  color: var(--color-error-300);
+  text-align: center;
+  padding-left: var(--space-6);
+  width: 100%;
+}
+
+.loginFormItem {
+  /* border: 2px solid deeppink; */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.loginFormItem > * {
+  flex: 1;
+}
+
+@media screen and (min-width: 768px) {
+  .loginFormWrapper {
+    max-width: 30vw;
+  }
 }
