feat: added desktop and mobile navbar

--- a/src/style.css
+++ b/src/style.css
@@ -51,9 +51,9 @@
 :root {
   --color-primary-100: hsl(23, 93%, 76%);
   --color-primary-300: hsl(23, 96%, 48%);
-  --color-primary-700: hsl(23, 96%, 20%);
+  --color-primary-700: hsl(23, 49%, 35%);
   --color-secondary-100: hsl(48, 100%, 96%);
-  --color-secondary-300: hsl(48, 100%, 96%);
+  --color-secondary-300: hsl(48, 69%, 90%);
   --color-secondary-700: hsl(48, 100%, 28%);
   --color-alternate-100: hsl(226, 82%, 72%);
   --color-alternate-300: hsl(226, 82%, 52%);
@@ -137,6 +137,9 @@ h6 {
 .main-wrapper {
   height: 100%;
 }
+.main-wrapper:last-child {
+  margin-top: var(--space-7);
+}
 body {
   font-family: "Verlag Book", monospace;
 }
@@ -181,8 +184,10 @@ p {
 }
 
 .logo-wrapper {
+  z-index: 100;
   width: 100%;
   position: fixed;
   top: 0;
   background-color: var(--color-primary-100);
+  box-shadow: 2px 3px 3px var(--color-primary-700);
 }
