--- a/src/components/Navbar/DesktopNavbar/DesktopNavbar.module.css
+++ b/src/components/Navbar/DesktopNavbar/DesktopNavbar.module.css
@@ -9,8 +9,8 @@
 
 @media screen and (min-width: 768px) {
   .DesktopNavbarWrapper {
-    position: fixed;
-    top: 0;
+    /* position: fixed;
+    top: 0; */
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
