--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -42,3 +42,10 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (min-width: 768px) {
+  .postsWrapper {
+    width: 50vw;
+    margin-left: var(--space-10);
+  }
+}
