--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -15,10 +15,11 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin: var(--space-1);
 }
 @media screen and (min-width: 768px) {
   .postsWrapper {
     width: 50vw;
-    margin-left: var(--space-10);
+    margin: var(--space-1) var(--space-2) var(--space-1) var(--space-6);
   }
 }
