--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -2,6 +2,7 @@
   height: 100%;
   margin-top: var(--space-7);
   display: flex;
+  flex: 2;
 }
 
 .postsWrapper {
@@ -17,9 +18,27 @@
   gap: 16px;
   margin: var(--space-1);
 }
+.feedMoreOptions {
+  border-left: 1px solid var(--color-primary-100);
+  height: 100%;
+  flex: 1;
+  display: none;
+  gap: 16px;
+  padding: 1rem;
+  margin: var(--space-1);
+}
+
+.feedMoreOptions h2 {
+  color: var(--color-primary-700);
+}
 @media screen and (min-width: 768px) {
   .postsWrapper {
     width: 50vw;
     margin: var(--space-1) var(--space-2) var(--space-1) var(--space-6);
+  }
+  .feedMoreOptions {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
   }
 }
