feat: added header part for profile page

--- a/src/components/Card/PostCard/PostCard.module.css
+++ b/src/components/Card/PostCard/PostCard.module.css
@@ -23,6 +23,9 @@
   align-items: center;
   border-bottom: 1px solid var(--color-primary-100);
 }
+.postCardHeader:hover {
+  cursor: pointer;
+}
 .postCardProfilePhoto {
   width: 50px;
   height: 50px;
