--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -51,3 +51,9 @@
   padding: 0 0 var(--space-2) var(--space-1);
   border-bottom: 1px solid var(--color-primary-100);
 }
+
+.profilePosts {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
