--- a/src/pages/SignUp/SignUp.module.css
+++ b/src/pages/SignUp/SignUp.module.css
@@ -38,7 +38,23 @@
   justify-content: space-between;
   align-items: center;
 }
-
+[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+[type="radio"] + img {
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+}
+.usernameErrorMessage {
+  color: red;
+  font-size: var(--font-length-sm3);
+  padding: 0;
+  margin: 0;
+}
 @media screen and (min-width: 786px) {
   .signUpWrapper {
     max-width: 30vw;
