--- a/src/pages/Feed/NewPost/NewPost.module.css
+++ b/src/pages/Feed/NewPost/NewPost.module.css
@@ -6,7 +6,8 @@
   border: 2px solid var(--color-primary-700);
   margin: var(--space-2) var(--space-1);
   border-radius: 5px;
-  box-shadow: 1px 2px 2px var(--color-primary-700);
+  box-shadow: 2px 3px 3px var(--color-primary-700),
+    2px 4px 4px var(--color-primary-700);
   background-color: var(--color-secondary-300);
 }
 
