--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -12,11 +12,14 @@
 
 .profileDetailsImage {
   flex: 1;
-  width: 95px;
-  height: 95px;
-  background-color: var(--color-alternate-700);
+
   border-radius: 50%;
   margin: var(--space-1);
+}
+
+.profileDetailsImage > img {
+  width: 80px;
+  height: 80px;
 }
 
 .profileDetails {
@@ -56,4 +59,12 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .profileWrapper {
+    max-width: 50vw;
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
