--- a/src/pages/SinglePost/SinglePost.module.css
+++ b/src/pages/SinglePost/SinglePost.module.css
@@ -2,18 +2,22 @@
   height: 100%;
   padding: var(--space-5) var(--space-2);
 }
-.singlePostWrapper > * {
+/* .singlePostWrapper > * {
   border-bottom: 1px solid var(--color-primary-100);
-}
+} */
 .singlePostHeader {
   display: flex;
   gap: 16px;
   padding-bottom: var(--space-2);
+  border-bottom: 1px solid var(--color-primary-100);
 }
-
+.singlePostHeader > small {
+  padding-top: 0.3rem;
+  color: var(--color-primary-300);
+}
 .singlePostHeader > figure {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
 }
 
 .profileDetails {
@@ -25,11 +29,17 @@
 
 .singlePostMain {
   padding: var(--space-3) 0;
+  border-bottom: 1px solid var(--color-primary-100);
 }
 
 .singlePostFooter > div {
   display: flex;
   justify-content: space-between;
   padding: var(--space-2) var(--space-1);
-  border-bottom: 1px solid var(--color-primary-100);
+}
+
+.singlePostCommentWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
