--- a/src/components/AddCommentForm/AddCommentForm.module.css
+++ b/src/components/AddCommentForm/AddCommentForm.module.css
@@ -1,11 +1,18 @@
 .AddCommentFormWrapper {
+  background-color: var(--color-secondary-100);
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   gap: 16px;
   padding: var(--space-2) 0;
+  border: 2px solid var(--color-primary-700);
+  padding: var(--space-1);
+  margin-top: var(--space-2);
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px var(--color-primary-700),
+    1px 2px 2px var(--color-primary-700);
 }
-.AddCommentFormWrapper > * {
-  flex: 1;
+.AddCommentFormWrapper > textarea {
+  flex: 2;
 }
