--- a/src/pages/Profile/MyProfile/MyProfile.module.css
+++ b/src/pages/Profile/MyProfile/MyProfile.module.css
@@ -1,17 +1,22 @@
 .profileWrapper {
-  margin: var(--space-8) var(--space-1);
+  margin: var(--space-2);
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
+
+.myProfileWrapper {
+  display: flex;
+  justify-content: flex-start;
+}
 .profileWrapper > p {
-  padding: 0 0 var(--space-1) var(--space-1);
+  padding: 0 0 var(--space-1) var(--space-2);
   font-size: var(--font-length-md1);
   color: var(--color-primary-700);
 }
 
 .profileDetailsImage {
-  flex: 1;
+  /* flex: 1; */
   display: flex;
   align-items: center;
   /* background-color: var(--color-alternate-700); */
@@ -27,11 +32,12 @@
 
 .profileDetails {
   display: flex;
+  /* padding-left: var(--space-1); */
 }
 
 .profileDetails > div {
   margin: var(--space-1);
-  flex: 2;
+  /* flex: 2; */
 }
 
 .profileDetails > div h2 {
@@ -41,7 +47,6 @@
 .profileDetailsFollowerWrapper {
   display: flex;
   gap: 16px;
-  border-bottom: 1px solid var(--color-primary-100);
 }
 
 .profileDetailsFollowerWrapper div h4 {
@@ -55,11 +60,23 @@
 .profileButtonWrapper {
   display: flex;
   gap: 16px;
-  padding: 0 0 var(--space-2) var(--space-1);
+  padding: 0 0 var(--space-2) var(--space-2);
+  border-bottom: 1px solid var(--color-primary-100);
 }
 
 .profilePosts {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .profileWrapper {
+    margin: var(--space-1);
+    width: 550px;
+    padding-left: var(--space-6);
+  }
 }
