--- a/src/pages/SinglePost/SinglePost.module.css
+++ b/src/pages/SinglePost/SinglePost.module.css
@@ -1,6 +1,14 @@
+.singlePostMainWrapper {
+  display: flex;
+}
+
 .singlePostWrapper {
+  padding: var(--space-2) 0;
+}
+
+.singlePostWrapper > div {
   height: 100%;
-  padding: var(--space-5) var(--space-2);
+  padding: var(--space-2);
 }
 /* .singlePostWrapper > * {
   border-bottom: 1px solid var(--color-primary-100);
@@ -35,11 +43,20 @@
 .singlePostFooter > div {
   display: flex;
   justify-content: space-between;
-  padding: var(--space-2) var(--space-1);
+  padding: var(--space-2) 0;
+  border-bottom: 1px solid var(--color-primary-100);
 }
 
 .singlePostCommentWrapper {
   display: flex;
   flex-direction: column;
   gap: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .singlePostWrapper {
+    width: 550px;
+    padding: var(--space-2);
+    padding-left: var(--space-6);
+  }
 }
