feat: added suggested profile section to all pages

--- a/src/components/Card/ProfileCard/ProfileCard.module.css
+++ b/src/components/Card/ProfileCard/ProfileCard.module.css
@@ -5,21 +5,22 @@
   display: flex;
   gap: 8px;
   padding: var(--space-1);
-  align-items: center;
+  align-items: flex-start;
 }
 
 .profileCardDetails {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: flex-start;
 }
 
-.profileCardDetails h3 {
+.profileCardDetails h4 {
   color: var(--color-primary-700);
 }
 .profileCardDetails button {
   font-size: var(--font-length-sm3);
-  padding: 0;
+  padding: 0.1rem 0.7rem;
 }
 .profileCardWrapper figure {
   background-color: black;
