--- a/src/pages/Profile/MyProfile/MyProfile.module.css
+++ b/src/pages/Profile/MyProfile/MyProfile.module.css
@@ -1,5 +1,5 @@
 .profileWrapper {
-  margin: var(--space-2);
+  margin-top: var(--space-2);
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -76,7 +76,7 @@
 @media screen and (min-width: 768px) {
   .profileWrapper {
     margin: var(--space-1);
-    width: 550px;
+    width: 650px;
     padding-left: var(--space-6);
   }
 }
