--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -1,5 +1,9 @@
+.profileMainWrapper {
+  display: flex;
+}
+
 .profileWrapper {
-  margin: var(--space-8) var(--space-1);
+  margin-top: var(--space-2);
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -11,8 +15,6 @@
 }
 
 .profileDetailsImage {
-  flex: 1;
-
   border-radius: 50%;
   margin: var(--space-1);
 }
@@ -27,8 +29,7 @@
 }
 
 .profileDetails > div {
-  margin: var(--space-1);
-  flex: 2;
+  /* margin: var(--space-1); */
 }
 
 .profileDetails > div h2 {
@@ -63,8 +64,7 @@
 
 @media screen and (min-width: 768px) {
   .profileWrapper {
-    max-width: 50vw;
-    margin-right: auto;
-    margin-left: auto;
+    width: 650px;
+    padding-left: var(--space-6);
   }
 }
