--- a/src/components/Card/PostCard/PostCard.module.css
+++ b/src/components/Card/PostCard/PostCard.module.css
@@ -20,7 +20,7 @@
   width: 100%;
   display: flex;
   gap: 16px;
-  align-items: center;
+
   border-bottom: 1px solid var(--color-primary-100);
 }
 .postCardHeader:hover {
@@ -37,8 +37,12 @@
   flex-direction: column;
   align-items: flex-start;
 }
-.postCardProfileHeaderDetails h4 {
+.postCardProfileHeaderDetails > h4 {
   color: var(--color-primary-700);
+}
+
+.postCardProfileHeaderDetails > small {
+  color: var(--color-primary-100);
 }
 .postCardBody img {
   object-fit: cover;
