--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -1,6 +1,7 @@
 .feedWrapper {
   height: 100%;
   margin-top: var(--space-7);
+
   display: flex;
   flex: 2;
 }
@@ -17,6 +18,7 @@
   flex-direction: column;
   gap: 16px;
   margin: var(--space-1);
+  margin-bottom: var(--space-8);
 }
 .feedMoreOptions {
   border-left: 1px solid var(--color-primary-100);
