--- a/src/components/Card/PostCard/PostCard.module.css
+++ b/src/components/Card/PostCard/PostCard.module.css
@@ -20,8 +20,16 @@
   width: 100%;
   display: flex;
   gap: 16px;
-
+  position: relative;
   border-bottom: 1px solid var(--color-primary-100);
+}
+
+.moreIcon {
+  display: flex;
+  gap: 8px;
+  position: absolute;
+  top: 15px;
+  right: 10px;
 }
 .postCardHeader:hover {
   cursor: pointer;
