--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -14,6 +14,7 @@
   margin-left: auto;
 }
 .feedMoreOptions {
+  flex: 1;
   display: none;
 }
 
@@ -25,6 +26,8 @@
     width: 650px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: var(--space-3);
+    overflow-y: auto;
   }
   .feedMoreOptions {
     width: 80%;
