--- a/src/pages/Profile/MyProfile/MyProfile.module.css
+++ b/src/pages/Profile/MyProfile/MyProfile.module.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: flex-start;
   width: 100%;
+  height: 100%;
 }
 .profileWrapper > p {
   padding: 0 0 var(--space-1) var(--space-2);
@@ -75,6 +76,7 @@
   gap: 16px;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: auto;
 }
 
 @media screen and (min-width: 768px) {
