refactor: added portfoliUrl in profile and fixed bugs

--- a/src/components/Navbar/MobileNavbar/MobileNavbar.module.css
+++ b/src/components/Navbar/MobileNavbar/MobileNavbar.module.css
@@ -8,6 +8,7 @@
   justify-content: space-between;
   background-color: var(--color-primary-100);
   box-shadow: -2px -4px 4px var(--color-primary-700);
+  z-index: 90;
 }
 .mobileNavbarWrapper > * {
   cursor: pointer;
