--- a/src/pages/Bookmark/Bookmark.module.css
+++ b/src/pages/Bookmark/Bookmark.module.css
@@ -20,6 +20,10 @@
   display: none;
 }
 
+.emptyBookmarkText {
+  text-align: center;
+}
+
 @media screen and (min-width: 768px) {
   .bookmarkPostsWrapper {
     max-width: 650px;
