refactor: changed code for ne wpost upload and fixed overflow styling issue

--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -12,10 +12,12 @@
 
 .profileWrapper {
   margin-top: var(--space-2);
+  padding: 0 var(--space-2);
   display: flex;
   flex-direction: column;
   gap: 16px;
   width: 100%;
+  overflow: auto;
 }
 .profileWrapper > p {
   padding: 0 0 var(--space-1) var(--space-1);
