--- a/src/pages/Feed/NewPost/NewPost.module.css
+++ b/src/pages/Feed/NewPost/NewPost.module.css
@@ -31,3 +31,29 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.newPostUploadOptions > div {
+  display: flex;
+  gap: 8px;
+}
+.uploadPostLabel {
+}
+.imgPreviewWrapper {
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
+  position: relative;
+}
+
+.imgPreviewWrapper > img {
+  max-width: 100%;
+  height: 20px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.imgPreviewWrapper > figcaption {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+}
