--- a/src/pages/SinglePost/SinglePost.module.css
+++ b/src/pages/SinglePost/SinglePost.module.css
@@ -10,6 +10,7 @@
 }
 .singlePostWrapper {
   padding: var(--space-2) 0;
+  overflow: auto;
 }
 
 .singlePost {
@@ -42,10 +43,12 @@
 }
 
 .singlePostMain {
-  padding: var(--space-3) 0;
+  padding: var(--space-1) 0;
   border-bottom: 1px solid var(--color-primary-100);
 }
-
+.singlePostImgWrapper {
+  margin-top: var(--space-1);
+}
 .singlePostFooter > div {
   display: flex;
   justify-content: space-between;
@@ -61,8 +64,8 @@
 
 @media screen and (min-width: 768px) {
   .singlePostWrapper {
-    width: 550px;
+    max-width: 650px;
     padding: var(--space-2);
-    padding-left: var(--space-6);
+    /* padding-left: var(--space-6); */
   }
 }
