--- a/src/pages/SinglePost/SinglePost.module.css
+++ b/src/pages/SinglePost/SinglePost.module.css
@@ -11,6 +11,7 @@
 .singlePostWrapper {
   padding: var(--space-2) 0;
   overflow: auto;
+  width: 100%;
 }
 
 .singlePost {
@@ -66,6 +67,7 @@
   .singlePostWrapper {
     max-width: 650px;
     padding: var(--space-2);
+    flex: 2;
     /* padding-left: var(--space-6); */
   }
 }
